--- a/courses/2016/madison/how-to-prepare.Rmd
+++ b/courses/2016/madison/how-to-prepare.Rmd
@@ -7,7 +7,7 @@ course:
   location: Madison
   year: 2016
   title: "Hierarchical Models Made Easy &mdash; July 16, 2016 &mdash; Madison, WI &mdash; NACCB Congress"
-  lecture: How to
+  lecture: How to prepare
   file: how-to-prepare
   previous: index
   next: Hierarchical-Models-Made-Easy_Intro
