--- a/courses/2016/madison/glmm.Rmd
+++ b/courses/2016/madison/glmm.Rmd
@@ -1,20 +1,18 @@
 ---
-title: "Hierarchical models"
+title: "Generalized linear mixed-effects models"
 author: "Peter Solymos and Subhash Lele"
 date: "July 16, 2016 &mdash; Madison, WI &mdash; NACCB Congress"
 layout: course
-output:
-  pdf_document:
-    toc: true
-    toc_depth: 2
-    number_sections: true
+output: pdf_document
 course:
   location: Madison
   year: 2016
   title: "Hierarchical Models Made Easy &mdash; July 16, 2016 &mdash; Madison, WI &mdash; NACCB Congress"
-  lecture: Intro
-  file: hierarchical-models
-  previous: Hierarchical-Models-Made-Easy_Intro
+  lecture: GLMM
+  file: glmm
+  previous: lmm
+  next: pva
+  pdf: glmm.pdf
 ---
 
 
